--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=e1a8fd83b8a243f30542)
- * Config saved to config.json and https://gist.github.com/e1a8fd83b8a243f30542
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=f67c37406a6e4537f0ae)
+ * Config saved to config.json and https://gist.github.com/f67c37406a6e4537f0ae
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -1086,7 +1086,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333333;
@@ -1136,7 +1136,7 @@ img {
   padding: 4px;
   line-height: 1.42857143;
   background-color: #ffffff;
-  border: 1px solid #ffffff;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -2316,7 +2316,7 @@ th {
   background-color: #f9f9f9;
 }
 .table-hover > tbody > tr:hover {
-  background-color: #990099;
+  background-color: #f5f5f5;
 }
 table col[class*="col-"] {
   position: static;
@@ -2341,14 +2341,14 @@ table th[class*="col-"] {
 .table > thead > tr.active > th,
 .table > tbody > tr.active > th,
 .table > tfoot > tr.active > th {
-  background-color: #990099;
+  background-color: #f5f5f5;
 }
 .table-hover > tbody > tr > td.active:hover,
 .table-hover > tbody > tr > th.active:hover,
 .table-hover > tbody > tr.active:hover > td,
 .table-hover > tbody > tr:hover > .active,
 .table-hover > tbody > tr.active:hover > th {
-  background-color: #80007f;
+  background-color: #e8e8e8;
 }
 .table > thead > tr > td.success,
 .table > tbody > tr > td.success,
@@ -3043,7 +3043,7 @@ fieldset[disabled] .btn {
 .btn-default {
   color: #ffffff;
   background-color: #ffffff;
-  border-color: #cccccc;
+  border-color: #000000;
 }
 .btn-default:hover,
 .btn-default:focus,
@@ -3053,7 +3053,7 @@ fieldset[disabled] .btn {
 .open > .dropdown-toggle.btn-default {
   color: #ffffff;
   background-color: #e6e6e6;
-  border-color: #adadad;
+  border-color: #000000;
 }
 .btn-default:active,
 .btn-default.active,
@@ -3079,7 +3079,7 @@ fieldset[disabled] .btn-default:active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
   background-color: #ffffff;
-  border-color: #cccccc;
+  border-color: #000000;
 }
 .btn-default .badge {
   color: #ffffff;
@@ -4597,7 +4597,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   padding: 8px 15px;
   margin-bottom: 20px;
   list-style: none;
-  background-color: #ffffff;
+  background-color: #f5f5f5;
   border-radius: 4px;
 }
 .breadcrumb > li {
@@ -4900,7 +4900,7 @@ a.badge:focus {
   margin-bottom: 20px;
   line-height: 1.42857143;
   background-color: #ffffff;
-  border: 1px solid #ffffff;
+  border: 1px solid #dddddd;
   border-radius: 4px;
   -webkit-transition: border 0.2s ease-in-out;
   -o-transition: border 0.2s ease-in-out;
@@ -5844,7 +5844,7 @@ button.close {
   position: absolute;
   z-index: 1070;
   display: block;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 12px;
   font-weight: normal;
   line-height: 1.4;
@@ -5951,7 +5951,7 @@ button.close {
   display: none;
   max-width: 276px;
   padding: 1px;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
   line-height: 1.42857143;
