--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,47 @@
-/*custom css*/
+/* custom css for akpsi wustl website */
 
+.padding {
 
+}
+.header {
+	font-family: 'Roboto', sans-serif;
+	text-transform:uppercase;
+	font-style:bold;
+	font-size:42px;
+}
 
+.subheader {
+	font-family: 'Raleway', sans-serif;
+	font-size:22px;
+}
 
+.nav {
+	font-family: 'Raleway', sans-serif;
+}
+
+.page-header {
+	font-family: 'Roboto', sans-serif;
+	text-transform:uppercase;
+	font-style:bold;
+	font-size:20px;
+}
+
+.section-header {
+	font-family: 'Roboto', sans-serif;
+	text-transform:uppercase;
+	font-style:bold;
+	font-size:17px;
+}
+
+.subsection-header {
+	font-family: 'Roboto', sans-serif;
+	font-style:bold;
+}
+
+p {
+	font-family: 'Raleway', sans-serif;
+}
+
+ul {
+	font-family: 'Raleway', sans-serif;
+}
