--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 /* custom css for akpsi wustl website */
 
+.header-image {
+	display:inline-block;
+}
+
 .padding {
 	padding-top:10px;
 }
@@ -10,6 +14,7 @@
 	text-transform:uppercase;
 	font-style:bold;
 	font-size:42px;
+	display:inline-block;
 }
 
 
@@ -17,6 +22,7 @@
 	font-family: 'Raleway', sans-serif;
 	font-style:bold;
 	font-size:15px;
+	display:inline;
 }
 
 
@@ -30,6 +36,17 @@
 	font-family: 'Raleway', sans-serif;
 	color:navy;
 }
+
+	a:link {}
+	a:visited {}
+	a:hover {
+		color:navy;
+		text-decoration:none;
+		text-shadow:0 0 4px gold;
+	}
+	a:active {
+		color:black;
+	}
 
 
 .page-header {
@@ -131,6 +148,7 @@
 }
 
 
+
 p {
 	font-family: 'Raleway', sans-serif;
 }
@@ -144,5 +162,4 @@ ul {
 iframe {
 	float:center;
 }
-
 
